<resources>
	<string name="app_name">Ultimate Tic Tac Toe Online </string>

	<string name="ultimate_tic_tac_toe_online">ULTIMATE\nTIC TAC TOE\nONLINE</string>
	<string name="by_emil_zalessky">by Emil Zalessky</string>
	<string name="sign_in">SIGN IN</string>
	<string name="register">REGISTER</string>
	<string name="play_offline_mode"><u>Play in offline mode</u></string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="logging_in">Logging in</string>
	<string name="back">BACK</string>
	<string name="email">Email</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="text_continue">CONTINUE</string>
	<string name="registration_failed">Registration failed</string>
	<string name="checking_email_availability">Checking email availability…</string>
	<string name="email_taken">This email already exist</string>
	<string name="please_wait">Please wait…</string>

	<string name="invalid_email">please enter a valid email</string>
	<string name="no_username">Please enter a username</string>
	<string name="invalid_username">Please enter a valid username</string>
	<string name="no_password">Please enter a password</string>
	<string name="no_confirm_password">Please confirm your password</string>

	<string name="username_taken">This username is already taken</string>
	<string name="password_invalid">Password must be 8–64 characters,\n
		include an uppercase letter,\n
		a lowercase letter,	a number\n
		and a special character</string>
	<string name="passwords_dont_match">Passwords do not match</string>
	<string name="invalid_credentials">Invalid password or email</string>

	<string name="play_against_ai">Play Against AI</string>
	<string name="choose_your_sign">Choose your sign</string>
	<string name="cross">Cross</string>
	<string name="nought">Nought</string>
	<string name="random">Random</string>
	<string name="singleplayer">Singleplayer</string>
	<string name="local_multiplayer">Local Multiplayer</string>
	<string name="online_multiplayer">Online Multiplayer</string>
	<string name="using_offline_mode">Using offline mode</string>
	<string name="exit">Exit</string>
	<string name="exit_confirmation">Are you sure you want to exit?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>

	<string name="abort_search">Abort Search</string>
	<string name="searching_for_opponent">Searching for opponent..</string>
	<string name="player_o_turn">Current Player: O</string>
	<string name="player_x_turn">Current Player: X</string>
	<string name="player_elo_format">(%d)</string>
	<string name="game_outcome_tie">It\'s a tie!</string>
	<string name="game_outcome_win">Player %s wins!</string>
	<string name="match_complete">Match Complete</string>
	<string name="return_to_menu">Return to menu</string>
	<string name="game_connection_error">Failed to connect to game server. Please try again later.</string>

	<string name="review_back">⟵\nBack</string>
	<string name="review_forward">⟶\nForward</string>
	<string name="last_move">You have reached the end of the move list</string>

	<string name="rank_format">#%d</string>
	<string name="elo_format">Elo: %d</string>
	<string name="recent_games">Recent Games</string>
	<string name="permission_required">Permission Required</string>
	<string name="permission_required_message">Permission required to access camera/gallery</string>
	<string name="updating_profile_picture">Updating Profile Picture</string>
	<string name="failed_to_load_image">Unable to load the selected image. Please try again</string>

	<string name="leaderboard">Leaderboard</string>
	<string name="rank">Rank</string>
	<string name="player">Player</string>
	<string name="elo_rating">Elo Rating</string>

	<string name="log_out">LOG OUT</string>
	<string name="settings">Settings</string>
	<string name="logout_failed">Unable to log out, try again</string>


	<string-array name="error_codes">
		<item>OK</item>
		<item>Game not started</item>
		<item>Not your turn</item>
		<item>Illegal move</item>
		<item>ERROR_INTERRUPTED</item>
	</string-array>
</resources>