<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACTIVITIES.AuthActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="398dp"
        android:layout_height="90dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/ultimate_tic_tac_toe_online"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="476dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_marginEnd="36dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Continue as guest"
        android:textColor="#0000EE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/tvCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_emil_zalessky"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>