<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ACTIVITIES.RegisterActivity">

	<ImageView
		android:id="@+id/ivBackground"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:alpha="1"
		android:importantForAccessibility="no"
		android:paddingStart="10dp"
		android:paddingTop="20dp"
		android:scaleType="centerCrop"
		android:scaleX="3.4"
		android:scaleY="3.4"
		android:src="@drawable/background"
		android:tintMode="multiply"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:tint="#1F2E4D"
		tools:ignore="RtlSymmetry" />

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/register"
		android:textColor="@color/textColor"
		android:textSize="50sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/etUsername"
		android:layout_width="250dp"
		android:layout_height="50dp"
		android:layout_marginTop="60dp"
		android:autofillHints="username"
		android:ems="10"
		android:fontFamily="@font/montserrat_medium"
		android:gravity="bottom"
		android:hint="@string/username"
		android:inputType="text"
		android:textColor="@color/textColor"
		android:textColorHint="@color/hintTextColor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

	<EditText
		android:id="@+id/etPassword"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:layout_marginTop="16dp"
		android:autofillHints="password"
		android:ems="10"
		android:fontFamily="@font/montserrat_medium"
		android:gravity="bottom"
		android:hint="@string/password"
		android:inputType="text|textPassword"
		android:textColor="@color/textColor"
		android:textColorHint="@color/hintTextColor"
		app:layout_constraintEnd_toEndOf="@+id/etUsername"
		app:layout_constraintStart_toStartOf="@+id/etUsername"
		app:layout_constraintTop_toBottomOf="@+id/etUsername" />

	<EditText
		android:id="@+id/etConfirmPassword"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:layout_marginTop="16dp"
		android:autofillHints="password"
		android:ems="10"
		android:fontFamily="@font/montserrat_medium"
		android:gravity="bottom"
		android:hint="@string/confirm_password"
		android:inputType="text|textPassword"
		android:textColor="@color/textColor"
		android:textColorHint="@color/hintTextColor"
		app:layout_constraintEnd_toEndOf="@+id/etPassword"
		app:layout_constraintStart_toStartOf="@+id/etPassword"
		app:layout_constraintTop_toBottomOf="@+id/etPassword" />

	<Button
		android:id="@+id/btnBack"
		android:layout_width="0dp"
		android:layout_height="110dp"
		android:layout_marginTop="32dp"
		android:backgroundTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/back"
		android:textSize="34sp"
		app:cornerRadius="20dp"
		app:layout_constraintEnd_toEndOf="@+id/btnRegister"
		app:layout_constraintStart_toStartOf="@+id/btnRegister"
		app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

	<Button
		android:id="@+id/btnRegister"
		android:layout_width="0dp"
		android:layout_height="110dp"
		android:layout_marginTop="512dp"
		android:backgroundTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/register"
		android:textSize="34sp"
		app:cornerRadius="20dp"
		app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
		app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
		app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>