<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ACTIVITIES.LeaderboardActivity">

	<ImageView
		android:id="@+id/ivBackground"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:alpha="1"
		android:importantForAccessibility="no"
		android:scaleType="centerCrop"
		android:scaleX="1.3"
		android:scaleY="1.3"
		android:src="@drawable/background"
		android:tintMode="multiply"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:tint="#1F2E4D"
		tools:ignore="RtlSymmetry" />

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/montserrat_bold"
		android:text="@string/leaderboard"
		android:textColor="@color/textColor"
		android:textSize="34sp"
		app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.06" />

	<TextView
		android:id="@+id/tvRank"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="6dp"
		android:layout_marginBottom="4dp"
		android:fontFamily="@font/montserrat_medium"
		android:text="@string/rank"
		android:textColor="@color/textColor"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/rvLeaderboard"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/tvPlayer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="64dp"
		android:fontFamily="@font/montserrat_medium"
		android:text="@string/player"
		android:textColor="@color/textColor"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="@+id/tvRank"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/tvRank"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/tvRating"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:fontFamily="@font/montserrat_medium"
		android:text="@string/elo_rating"
		android:textColor="@color/textColor"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="@+id/tvRank"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/tvRank" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rvLeaderboard"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="40dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>