<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ACTIVITIES.LoginActivity">

	<ImageView
		android:id="@+id/ivBackground"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:alpha="1"
		android:importantForAccessibility="no"
		android:scaleType="centerCrop"
		android:scaleX="1.3"
		android:scaleY="1.3"
		android:src="@drawable/background"
		android:tintMode="multiply"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:tint="#1F2E4D"
		tools:ignore="RtlSymmetry" />

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/sign_in"
		android:textColor="@color/textColor"
		android:textSize="50sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tilUsername"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:hint="@string/username"
		android:textColorHint="@color/hintTextColor"
		app:boxStrokeColor="@color/colorPrimary"
		app:cursorColor="@color/textColor"
		app:hintTextColor="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvTitle">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/etUsername"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:autofillHints="username"
			android:fontFamily="@font/montserrat_medium"
			android:inputType="text"
			android:textColor="@color/textColor"
			android:textColorHint="#1E88E5" />

	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tilPassword"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/password"
		android:textColorHint="@color/hintTextColor"
		app:boxStrokeColor="@color/colorPrimary"
		app:cursorColor="@color/textColor"
		app:hintTextColor="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="@+id/tilUsername"
		app:layout_constraintStart_toStartOf="@+id/tilUsername"
		app:layout_constraintTop_toBottomOf="@+id/tilUsername"
		app:passwordToggleEnabled="true"
		app:passwordToggleTint="@color/colorPrimary">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/etPassword"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:autofillHints="password"
			android:fontFamily="@font/montserrat_medium"
			android:inputType="textPassword"
			android:textColor="@color/textColor"
			android:textColorHint="@color/hintTextColor" />
	</com.google.android.material.textfield.TextInputLayout>

	<CheckBox
		android:id="@+id/cbRememberMe"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:buttonTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_medium"
		android:text="@string/remember_me"
		android:textColor="@color/textColor"
		app:layout_constraintStart_toStartOf="@+id/tilPassword"
		app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

	<Button
		android:id="@+id/btnSignIn"
		android:layout_width="290dp"
		android:layout_height="110dp"
		android:layout_marginTop="430dp"
		android:backgroundTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/sign_in"
		android:textSize="34sp"
		app:cornerRadius="15dp"
		app:layout_constraintEnd_toEndOf="@+id/tilPassword"
		app:layout_constraintStart_toStartOf="@+id/tilPassword"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/btnBack"
		android:layout_width="0dp"
		android:layout_height="110dp"
		android:layout_marginTop="24dp"
		android:backgroundTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/back"
		android:textSize="34sp"
		app:cornerRadius="15dp"
		app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
		app:layout_constraintStart_toStartOf="@+id/btnSignIn"
		app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>