<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ACTIVITIES.Register2Activity">

	<ImageView
		android:id="@+id/ivBackground3"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:alpha="1"
		android:importantForAccessibility="no"
		android:scaleType="centerCrop"
		android:scaleX="1.3"
		android:scaleY="1.3"
		android:src="@drawable/background"
		android:tintMode="multiply"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:tint="#1F2E4D"
		tools:ignore="RtlSymmetry" />

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/register"
		android:textColor="@color/textColor"
		android:textSize="50sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.imageview.ShapeableImageView
		android:id="@+id/ivPfp"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_marginTop="24dp"
		android:clickable="true"
		android:scaleType="fitXY"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvTitle"
		app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Chip"
		app:srcCompat="@drawable/default_pfp" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tilEmail"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:hint="@string/username"
		android:textColorHint="@color/hintTextColor"
		app:boxStrokeColor="@color/colorPrimary"
		app:cursorColor="@color/textColor"
		app:hintTextColor="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/ivPfp">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/etEmail"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:autofillHints="new_username"
			android:fontFamily="@font/montserrat_medium"
			android:inputType="text"
			android:textColor="@color/textColor"
			android:textColorHint="@color/hintTextColor" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/btnRegister"
		android:layout_width="290dp"
		android:layout_height="110dp"
		android:layout_marginTop="430dp"
		android:backgroundTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/register"
		android:textSize="34sp"
		app:cornerRadius="15dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHeight_percent="0.15"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintWidth_percent="0.73" />

	<Button
		android:id="@+id/btnBack"
		android:layout_width="0dp"
		android:layout_height="110dp"
		android:layout_marginTop="24dp"
		android:backgroundTint="@color/buttonColor"
		android:fontFamily="@font/montserrat_semibold"
		android:text="@string/back"
		android:textSize="34sp"
		app:cornerRadius="15dp"
		app:layout_constraintEnd_toEndOf="@+id/btnRegister"
		app:layout_constraintHeight_percent="0.15"
		app:layout_constraintStart_toStartOf="@+id/btnRegister"
		app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>